<resources>
    <string name="app_name">Hinge</string>
    <string name="designed_to_be_deleted">Designed to be deleted.</string>
    <string name="or_continue_with_phone_number">Or continue with phone number</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="settings">Settings</string>
    <string name="boost">Boost</string>
    <string name="help_centre">Help Centre</string>
    <string name="account">Account</string>
    <string name="preference">Preferences</string>
    <string name="Name">Nipun</string>
    <string name="learnmore">Learn more</string>
    <string name="prefered_member">Preferred Members go on twice as many dates.</string>
    <string name="just_joined">Just Joined</string>
    <string name="terms_of_service"><u>Terms of Service</u>.<b> </b></string>
    <string name="privacy_policy"><u>Privacy Policy</u>.</string>
    <string name="your_data_in_our">your data in our<b> </b></string>
    <string name="learn_how_we_process">Learn how we process</string>
    <string name="by_signing_up_for_hinge_you_agree_to_our">By signing up for Hinge, you agree to our</string>
    <string name="hinge_full_logo">Hinge full logo</string>
    <string name="_0_complete">0% Complete</string>
    <string name="edit">Edit</string>
    <string name="i_m_interested_in">I\'m interested in</string>
    <string name="my_location">My location</string>
    <string name="age_range">Age range</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="maximum_distance">Maximum distance</string>
    <string name="basic_preference">Basic Preferences</string>
    <string name="member_preferences">Member Preferences</string>

    <string name="place_name">Place Name</string>
    <string name="open_to_all">Open to all</string>
    <string name="religion">Religion</string>
    <string name="preferred_preferences">Preferred Preferences</string>
    <string name="height">Height</string>
    <string name="politics">Politics</string>
    <string name="smoking">Smoking</string>
    <string name="drinking">Drinking</string>
    <string name="education">Education</string>
    <string name="when_i_see_an_android_developer">When I see an Android developer</string>
    <string name="by_showing_me_the_code">By showing me the code.</string>
    <string name="looking_for_an_android_developer">Looking for an android developer</string>
    <string name="lisa">Lisa</string>
    <string name="_23">23</string>
    <string name="woman">Woman</string>
    <string name="buriram">Buriram</string>
    <string name="south_asian">South Asian</string>
    <string name="don_t_want_children">Don\'t want children</string>

    <string name="praphamontree">Praphamontree</string>
    <string name="buddhist">Buddhist</string>
    <string name="thailand">Thailand</string>
    <string name="_5_6">5\' 6\"</string>
    <string name="when_i_know_you_got_an_iphone">When I know you got an iPhone</string>
    <string name="i_m_looking_for">I\'m looking for</string>
    <string name="a_cool_android_developer_who_can_implement_mvvm_architecture_flawlessly">A cool android developer who can implement MVVM architecture flawlessly.</string>
    <string name="we_will_install_our_app_in_here">We will install our app in here.</string>
    <string name="i_ll_fall_for_you_if">I\'ll fall for you if</string>
    <string name="you_complete_6_months_of_masai_school_with_100_attendance_and_assignment_submission">You complete 6 months of masai school with 100% attendance and assignment submission.</string>
    <string name="my_cool_pic_with_my_cool_phone">My cool pic with my cool phone.</string>
    <string name="my_ex_build_brawl_stars">My ex build Brawl Stars.</string>
    <string name="the_way_to_win_me_over_is">The way to win me over is</string>

    <string name="standouts">Standouts</string>
    <string name="roses_1">Roses (1)</string>
    <string name="outstanding_prompts_from_people_most_your_type">Outstanding prompts from people most your type.</string>
    <string name="learn_more">Learn more.</string>
    <string name="refreshed_daily">Refreshed daily.</string>
    <string name="fresh_out_of_srandouts">Fresh out of Srandouts!</string>
    <string name="standout_content">You\'v seen everyone who fits \nyour preferences, but check back\nsoon for new people.</string>
    <string name="you_v_seen_everyone_who_fits">You\'v seen everyone who fits</string>
    <string name="your_preferences_but_check_back">your preferences, but check back</string>
    <string name="soon_for_new_people">soon for new people.</string>

    <string name="like_you">Like You</string>
    <string name="new_likes_will_appear_here">New Likes Will appear here.</string>
    <string name="for_more_likes_now">for more likes now</string>
    <string name="upgrade">Upgrade</string>
    <string name="preferred_members_can_vies_all_their_like_at_once">Preferred members can vies all their like at once</string>
    <string name="up_next">Up next</string>

    <string name="what_s_your">What\'s your phone</string>
    <string name="catch_their_eye_by_sending_a_rose">Catch their eye by sending a Rose</string>
    <string name="roses_are_always_seen_first_and_twice_as_likely_to_lead_to_a_date_a_purchased_rose_never_expires">Roses are always seen first and twice as likely to lead to a date. A purchased Rose never expires</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_12">12</string>
    <string name="rose">Rose</string>
    <string name="_1750_00_291_66_each">₹1750.00 (₹291.66/each)</string>
    <string name="roses">Roses</string>
    <string name="_2650_00_220_83_each">₹2650.00 (₹220.83/each)</string>
    <string name="new_matches_will_appear_here">New matches will appear here.</string>
    <string name="_3">3</string>
    <string name="month">months</string>
    <string name="preferred_members_get_twice_as_many_dates_here_s_why">Preferred Members get twice as many dates. Here\'s Why...</string>
    <string name="_4950_00_825_00_month">₹4950.00 (₹825.00/month)</string>
    <string name="_3300_00_1100_month">₹3300.00 (₹1100/month)</string>
    <string name="most_popular">Most Popular</string>
    <string name="_1650_00">₹1650.00</string>
    <string name="set_advanced_preferences">Set advanced preferences.</string>
    <string name="see_everyone_who_likes_you">See everyone who likes you.</string>
    <string name="send_unlimited_likes">Send unlimited likes.</string>
    <string name="all_in_one_organised_place">All in one organised place.</string>
    <string name="education_family_plans_politics_and_vices">Education, family plans, politics and vices</string>
    <string name="recurring_billing_cancel_anytime">Recurring billing, cancel anytime.</string>
    <string name="by_tapping_continue_your_payment_will_be_charged_to_your_google_play_account_and_yours_subscription_will_automatically_renew_for_the_same_package_length_at_the_same_price_until_you_cancel_in_settings_in_the_play_store_by_tapping_continue_you_agree_to_our">By tapping Continue, your payment will be charged to your Google play account, and yours subscription will automatically renew for the same package length at the same price until you cancel in settings in the Play Store. By tapping Continue, you agree to our</string>
    <string name="restore_subscription">Restore subscription</string>
    <string name="find_your_person_sooner">Find your person sooner</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_your_account_will_permanently_erase_convos_with_your_connection">Delete your account will permanently erase convos with your connection.</string>
    <string name="confirm_delete">Confirm delete</string>o

    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name_is_optional_and_only_shared_with_matches">Last name is optional, and only shared with matches.</string>
    <string name="why">Why?</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="age_can_only_be_changed_once">Age can only be changed once</string>

    <string name="man">Man</string>
    <string name="feedback_on_genders">Feedback on genders?</string>
    <string name="why_last_name">Why last name?</string>
    <string name="adding_your_last_name_helps_create_a_safer_more_authentic_and_accountable_community">Adding your last name helps create a safer, more authentic and accountable community</string>
    <string name="ok_got_it">OK got it</string>

    <string name="yes">Yes</string>
    <string name="go_back">Go back</string>

    <string name="agra">Agra</string>
    <string name="drugs">Drugs</string>
    <string name="marijuana">Marijuana</string>

    <string name="children">Children</string>
    <string name="family_plans">Family plans</string>
    <string name="upgrade_for_access">● Upgrade for access</string>

    <string name="pause_my_profile">Pause My Profile</string>
    <string name="pause">Pause</string>
    <string name="phone_amp_email"><![CDATA[Phone & email]]></string>
    <string name="membership">Membership</string>
    <string name="privacy_preferences">Privacy Preferences</string>
    <string name="safe_dating_tips">Safe Dating Tips</string>
    <string name="licenses">Licenses</string>
    <string name="delete_account">Delete Account</string>
    <string name="download_my_data">Download my data</string>
    <string name="terms_of_service1">Terms of service</string>
    <string name="privacy_policy1">Privacy Policy</string>
    <string name="legal">Legal</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="connected_accounts">Connected accounts</string>
    <string name="upgrade_to_preferred_membership">Upgrade to Preferred Membership</string>
    <string name="emails">Emails</string>
    <string name="push_notification">Push Notification</string>
    <string name="notifications">Notifications</string>
    <string name="asdas_gmail_com">asdas@gmail.com</string>
    <string name="_8452648558">8452648558</string>
    <string name="my_virtues">My virtues</string>
    <string name="work">Work</string>
    <string name="android_app_development">Android app development</string>

    <string name="no">No</string>

    <string name="job_title">Job title</string>
    <string name="full_stack_android_developmeer">Full stack Android developmeer</string>
    <string name="masai">Masai</string>
    <string name="school">School</string>
    <string name="education_level">Education level</string>
    <string name="bootcamp">Bootcamp</string>
    <string name="women">Woman</string>


</resources>