<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.UserDetails.Gender_Activity">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/actionbar_cardView_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvName_discover"
            style="@style/discover_title_textStyle"
            android:layout_marginStart="30dp"
            android:text="@string/gender"
            android:textColor="@color/black" />

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_left_arrow" />
    </androidx.cardview.widget.CardView>
    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0" />

    <Button

        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/man_women_btn"
        android:fontFamily="sans-serif"
        android:text="@string/man"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/man_women_btn"
        android:fontFamily="sans-serif"
        android:text="@string/women"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button8"

        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:background="@color/white"
        android:gravity="top"
        android:text="@string/feedback_on_genders"
        android:textAllCaps="false"
        android:textColor="@color/faceBook_btn_background"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="0.921" />

</androidx.constraintlayout.widget.ConstraintLayout>
